dropdown component designed

--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,25 @@
   </head>
   <body>
     <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
+    <hr />
+    <br /><br />
+    <h5>keka dropdown</h5>
+    <keka-dropdown label="Select item" avatars multiple>
+      <keka-dropdown-item label="Item 1" />
+      <keka-dropdown-item label="Item 2" />
+      <keka-dropdown-item label="Item 3" />
+    </keka-dropdown>
+    <keka-dropdown avatars multiple>
+      <keka-dropdown-item label="Item 1" />
+      <keka-dropdown-item label="Item 2" />
+      <keka-dropdown-item label="Item 3" />
+    </keka-dropdown>
+    <keka-dropdown type="list" alignment="end" label="+3" avatars>
+      <keka-dropdown-item label="Item 1" />
+      <keka-dropdown-item label="Item 2" />
+      <keka-dropdown-item label="Item 3" />
+    </keka-dropdown>
+
+    <br><br>
   </body>
 </html>
