--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,28 @@
   </head>
   <body>
     <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
+    <hr />
+    <br /><br />
+
+    <h5>keka tabs : default</h5>
+    <keka-tab-bar>
+      <keka-tab-item header="Tab One"> <h1>tab one</h1> </keka-tab-item>
+      <keka-tab-item header="Tab Two" open> <h1>tab two</h1> </keka-tab-item>
+      <keka-tab-item header="Tab Three"> <h1>tab Three</h1> </keka-tab-item>
+      <keka-tab-item header="Tab Four"> <h1>tab four</h1> </keka-tab-item>
+    </keka-tab-bar>
+    <hr />
+    <br /><br />
+
+    <h5>keka tabs : switch type</h5>
+    <keka-tab-bar type="switch">
+      <keka-tab-item header="Tab One" navigate="https://google.com"> <h1>tab one</h1> </keka-tab-item>
+      <keka-tab-item header="Tab Two" open> <h1>tab two</h1> </keka-tab-item>
+      <keka-tab-item header="Tab Three"> <h1>tab Three</h1> </keka-tab-item>
+      <keka-tab-item header="Tab Four"> <h1>tab four</h1> </keka-tab-item>
+    </keka-tab-bar>
+    <hr />
+    <br /><br />
+
   </body>
 </html>
