error fixed for setAttribute on list type dropdown and added scroll-y

--- a/src/index.html
+++ b/src/index.html
@@ -23,10 +23,15 @@
       <keka-dropdown-item label="Item 2" />
       <keka-dropdown-item label="Item 3" />
     </keka-dropdown>
-    <keka-dropdown type="list" alignment="end" label="+3" avatars>
+    <keka-dropdown type="list" label="+3" avatars>
       <keka-dropdown-item label="Item 1"/>
       <keka-dropdown-item label="Item 2" />
       <keka-dropdown-item label="Item 3" />
+      <keka-dropdown-item label="Item 4" />
+      <keka-dropdown-item label="Item 5" />
+      <keka-dropdown-item label="Item 6" />
+      <keka-dropdown-item label="Item 7" />
+      <keka-dropdown-item label="Item 8" />
     </keka-dropdown>
 
     <br><br>
