--- a/src/index.html
+++ b/src/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=5.0" />
-    <title>Abhishek | Stencil Component</title>
+    <title>vijay | stencil</title>
 
     <script type="module" src="/build/stencil-components.esm.js"></script>
     <script nomodule src="/build/stencil-components.js"></script>
   </head>
   <body>
     <my-component first="Stencil" last="'Don't call me a framework' JS"></my-component>
-    <hr />
+    <!-- <hr />
     <br /><br />
 
     <h5>keka dropdown</h5>
@@ -51,7 +51,7 @@
       <keka-tab-item header="Tab Four"> <h1>tab four</h1> </keka-tab-item>
     </keka-tab-bar>
     <hr />
-    <br /><br />
+    <br /><br /> -->
 
 
   </body>
